--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/normalize.css">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page for WDD231</title>
+    <meta name="description" content="This is my course home page.">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link name="author" content="Katlin Christine Denney">
 </head>
 <body>
     <h1>WDD 231  Katlin Denney</h1>
