--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page for WDD231</title>
     <meta name="description" content="This is my course home page.">
-    <link rel="stylesheet" href="styles/normalize.css">
     <link name="author" content="Katlin Christine Denney">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
-    <h1>WDD 231  Katlin Denney</h1>
+    <header>
+        <h1>WDD 231  Katlin Denney</h1>
+        <nav> 
+
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="scripts/script.js"></script>
+    
 </body>
 </html>
