--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +13,8 @@
 </head>
 <body>
     <header>
+        <img src="images/katprofilesmall.jpeg" alt="Your Name" width="150" height="180">
+        
         <h1>WDD 231  Katlin Denney</h1>
         <nav> 
 
