--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 </head>
 <body>
     <header>
-        <img src="images/katprofilesmall.jpeg" alt="Your Name" width="150" height="180">
-        
-        <h1>WDD 231  Katlin Denney</h1>
-        <nav> 
+        <img src="images/katprofilesmall.jpeg" alt="Your Name" width="150" height="190">
+        <span class="name">Katlin Christine Denney</span>
 
+        <h1>WDD 231  Katlin Denney</h1>
+        <nav>
+            <ul>
+                <li><a href="https://katdenney.github.io/wdd231/">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="https://github.com/katdenney">GitHub Profile</a></li>
+                <li><a href="https://www.linkedin.com/in/katlindenney6/">LinkedIn</a></li>
+            </ul> 
         </nav>
     </header>
     <main>
