--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <img src="images/katprofilesmall.jpeg" alt="Your Name" width="150" height="190">
         <span class="name">Katlin Christine Denney</span>
 
-        <h1>WDD 231  Katlin Denney</h1>
         <nav>
             <ul>
                 <li><a href="https://katdenney.github.io/wdd231/">Home</a></li>
@@ -27,9 +26,32 @@
         </nav>
     </header>
     <main>
+        <h1>Home</h1>
+        <section>
+            <h2>
+
+            </h2>
+        </section>
+        <section>
+            <h2>
+                
+            </h2>
+        </section>
+        <section>
+            <h2>
+                
+            </h2>
+        </section>
 
     </main>
     <footer>
+        <p>
+            <span id="currentyear"></span>
+
+        </p>
+        <p>
+
+        </p>
 
     </footer>
     <script src="scripts/script.js"></script>
