--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home Page for WDD231</title>
     <meta name="description" content="This is my course home page.">
     <link name="author" content="Katlin Christine Denney">
+    <script src="scripts/date.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -46,15 +47,14 @@
     </main>
     <footer>
         <p>
-            <span id="currentyear"></span>
-
+            &copy; <span id="currentyear"></span> Katlin Denney SLC Utah
         </p>
         <p>
-
+            <span id="lastModified" ></span>
         </p>
 
     </footer>
-    <script src="scripts/script.js"></script>
+    
     
 </body>
 </html>
