--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="This is my course home page.">
     <link name="author" content="Katlin Christine Denney">
     <script src="scripts/date.js" defer></script>
+    <script src="scripts/course.js" defer></script>
+    <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -28,26 +30,32 @@
     </header>
     <main>
         <h1>Home</h1>
-        <section>
+        <section id="section1">
             <h2>
-
+                Course Work
             </h2>
         </section>
-        <section>
+        <section id="section2">
             <h2>
-                
+                Salt Lake City, Utah
             </h2>
+            <img src="" alt="">
         </section>
-        <section>
+        <section id="section3">
             <h2>
-                
+                Web and Computer Programming Certificate
             </h2>
+            <div>
+                <button id="all">Show all</button>
+                <button id="wdd">Show wdd</button>
+                <button id="cse">Show cse</button>
+            </div>
+            <div id="courseContainer"></div>
         </section>
-
     </main>
     <footer>
         <p>
-            &copy; <span id="currentyear"></span> Katlin Denney SLC Utah
+            &copy; <span id="currentyear"></span> Katlin Denney Utah
         </p>
         <p>
             <span id="lastModified" ></span>
