js courses. havent found my error

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 Web and Computer Programming Certificate
             </h2>
             <div>
-                <button id="all">Show all</button>
-                <button id="wdd">Show wdd</button>
-                <button id="cse">Show cse</button>
+                <button id="all">Show ALL</button>
+                <button id="wdd">Show WDD</button>
+                <button id="cse">Show CSE</button>
             </div>
             <div id="courseContainer"></div>
         </section>
