fixed typos. courseContainer working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is my course home page.">
     <link name="author" content="Katlin Christine Denney">
     <script src="scripts/date.js" defer></script>
-    <script src="scripts/course.js" defer></script>
+    
     <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -50,7 +50,9 @@
                 <button id="wdd">Show WDD</button>
                 <button id="cse">Show CSE</button>
             </div>
-            <div id="courseContainer"></div>
+            <div id="courseContainer">
+
+            </div>
         </section>
     </main>
     <footer>
