--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is my course home page.">
     <link name="author" content="Katlin Christine Denney">
     <script src="scripts/date.js" defer></script>
-    
+    <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
