--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel ="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
