things looking closer to how they should

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel ="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <img src="images/katprofilesmall.jpeg" alt="Your Name" width="150" height="190">
+        <img src="images/katprofilesmall.jpeg" alt="photo of katlin denney" width="150" height="190">
         <span class="name">Katlin Christine Denney</span>
 
         <nav>
@@ -32,20 +32,23 @@
             </ul> 
         </nav>
     </header>
-    <main>
+    <main class="container">
         <h1>Home</h1>
-        <section id="section1">
+        <section class="item-1" id="section1">
             <h2>
                 Course Work
             </h2>
+            <p>
+                This is where course work will be for WDD 231. I am currently enrolled in the Web and Computer Programming Certificate program.
+            </p>
         </section>
-        <section id="section2">
+        <section class="item-2" id="section2">
             <h2>
                 Salt Lake City, Utah
             </h2>
-            <img src="" alt="">
+            <img src="images/slc.jpeg" alt="photo of salt lake city" width="300" height="auto">
         </section>
-        <section id="section3">
+        <section class="item-3" id="section3">
             <h2>
                 Web and Computer Programming Certificate
             </h2>
