--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page for WDD231</title>
     <meta name="description" content="This is my course home page.">
-    <link name="author" content="Katlin Christine Denney">
+    <meta name="author" content="Katlin Christine Denney">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
