fixed slc img height

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>
                 Salt Lake City, Utah
             </h2>
-            <img src="images/slc.jpeg" alt="photo of salt lake city" width="300" height="auto">
+            <img src="images/slc.jpeg" alt="photo of salt lake city" width="300" height="350">
         </section>
         <section class="item-3" id="section3">
             <h2>
