--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home Page for WDD231</title>
     <meta name="description" content="This is my course home page.">
     <meta name="author" content="Katlin Christine Denney">
+    <link href="images/favicon.ico" rel="icon" type="image/x-icon"> <!-- favicon-->
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
@@ -14,9 +15,9 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
 </head>
 <body>
     <header>
