--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
     <header>
         <img src="images/katprofilesmall.jpeg" alt="photo of katlin denney" width="150" height="190">
         <span class="name">Katlin Christine Denney</span>
-
+        <button id="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button> <!--hamburger menu -->
         <nav>
-            <ul>
-                <li><a href="https://katdenney.github.io/wdd231/">Home</a></li>
+            <ul id="menu">
+                <li><a href="https://katdenney.github.io/wdd231/" class="active">Home</a></li>
                 <li><a href="#">Chamber</a></li>
                 <li><a href="https://github.com/katdenney">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/katlindenney6/">LinkedIn</a></li>
