--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta property="og:title" content="Katlin Christine Denney - Home Page for WDD231">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="images/websiteImageWDD231.jpeg">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
