--- a/prophets.html
+++ b/prophets.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Katlin Christine Denney - Latter-day Prophets">
+    <meta property="og:type" content="website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/prophets.css">
+    <script src="scripts/prophets.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Latter-day Prophets</h1>
       </header>
       <main>
-        <div id="cards"></div>
+        <div class="grid" id="cards"></div>
       </main>
       <footer>
         Katlin Denney | Latter-day Prophets
