--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </h2>
             <p>
                 This is where course work will be for WDD 231. I am currently enrolled in the Web and Computer Programming Certificate program.
+                <a href="site_plan.html">View Site Plan</a>
             </p>
         </section>
         <section class="item-2" id="section2">
