--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,7 +29,17 @@
    
 </head>
 <body>
-    
+    <header>
+        <h1>Saratoga Chamber of Commerce Directory</h1>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html"class="active">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
+            </ul>  
+        </nav>
+    </header>
     <main>
 
     </main>
