--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/websiteImageWDD231.jpeg">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Home Page for WDD231</title>
     <meta name="description" content="This is my course home page.">
-    <meta name="author" content="Katlin Christine Denney">
+    <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
     <link href="images/favicon.ico" rel="icon" type="image/x-icon"> <!-- favicon-->
+
     <script src="scripts/date.js" defer></script>
     <script src="scripts/course.js" defer></script>
     <script src="scripts/script.js" defer></script>
@@ -19,6 +22,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
@@ -35,7 +39,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/" class="active">Home</a></li>
-                <li><a href="#">Chamber</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber">Chamber</a></li>
                 <li><a href="https://github.com/katdenney">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/katlindenney6/">LinkedIn</a></li>
             </ul> 
