--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,10 +32,10 @@
         <h1>Satatoga Chamber of Commerce </h1>
         <nav>
             <ul id="menu">
-                <li><a href="#"class="active">Home</a></li>
-                <li><a href="#">Discover</a></li>
-                <li><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="index.html"class="active">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
             </ul> 
         </nav>
     </header>
