--- a/site_plan.html
+++ b/site_plan.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
-    
+
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/site_plan.css"> <!-- Main stylesheet for the site plan page -->
 </head>
@@ -29,8 +29,8 @@
         <h1>Site Plan</h1>
         <nav>
             <ul id="menu">
-                <li><a href="chamber/index.html" class="active">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html" class="active">Home</a></li>
+                <li><a href=" https://katdenney.github.io/wdd231/discover.html">Discover</a></li>
                 <li><a href="chamber/directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
             </ul> 
