adding menu items

--- a/site_plan.html
+++ b/site_plan.html
@@ -29,10 +29,11 @@
         <h1>Site Plan</h1>
         <nav>
             <ul id="menu">
-                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html" class="active">Home</a></li>
-                <li><a href=" https://katdenney.github.io/wdd231/discover.html">Discover</a></li>
-                <li><a href="chamber/directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Chamber</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html">Directory</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/site_plan.html" class="active">Site Plan</a></li>
             </ul> 
         </nav>
     </header>
