--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,10 +32,10 @@
         <h1>Satatoga Chamber of Commerce </h1>
         <nav>
             <ul id="menu">
-                <li><a href="index.html"class="active">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
-                <li><a href="directory.html">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html"class="active">Home</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html">Directory</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
             </ul> 
         </nav>
     </header>
