--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,10 +33,10 @@
         <h1>Saratoga Chamber of Commerce Directory</h1>
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
-                <li><a href="directory.html"class="active">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html"class="active">Directory</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
             </ul>  
         </nav>
     </header>
