directory good enough?

--- a/site_plan.html
+++ b/site_plan.html
@@ -77,11 +77,11 @@
         </section>  
         <section>
             <h2>design Brief</h2>
-            <p>Primary Color #______
-                Secondary Color#______
-                Background Color: #______
-                Text Color #______
-                Font Family _____________________
+            <p>Primary Color: #227C9D 
+                Secondary Color: #FFCB77 
+                Background Color: #FEF9EF 
+                Text Color: #130D01 
+                Font Family "Barlow", sans-serif
                 </p>
         </section> 
         <section>
@@ -98,7 +98,7 @@
             &copy; <span id="currentyear"></span> Saratoga Chamber of Commerce
         </p>
         <p>
-            <span id="lastModified" ></span>
+            <span id="lastModified" ></span> Katlin Denney WDD231
         </p>
 
     </footer>
