--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,14 +17,14 @@
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/script.js" defer></script> <!--i'll probs use this ?-->
-    <script src="chamber/scripts.js" defer></script> <!-- JavaScript file for the chamber website -->
+   
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
 
-    <link rel="stylesheet" href="/chamber/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
+    <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
             </ul> 
         </nav>
     </header>
-    <main>
+    <main class= "main-content">
         <section>
             <h2>Directory</h2>
             <p>Businesses in the Saratoga area</p>
@@ -57,9 +57,9 @@
             &copy; <span id="currentyear"></span> Saratoga Chamber of Commerce
         </p>
         <p>
-            <span id="lastModified" ></span>
+            <span id="lastModified" ></span> Katlin Denney WDD231
         </p>
-    
+
     </footer>
 </body>
 </html>
