--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Saratoga Chamber of Commerce Directory">
+    <meta property="og:title" content="Chamber of Commerce Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/chamber/directory.html"> <!-- URL of the page -->
