--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Chamber of Commerce Directory">
+    <meta property="og:title" content="Saratoga Chamber of Commerce Directory">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/chamber/directory.html"> <!-- URL of the page -->
@@ -13,7 +13,7 @@
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
     <link href="/chamber/favicontree.ico" rel="icon" type="image/x-icon"> <!-- favicon-->
-    <title>Directory</title>
+    <title>Saratoga Chamber of Commerce Directory Page</title>
 
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
     <script src="scripts/script.js" defer></script> 
