--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
     <meta name="description" content="This is the directory page for my chamber of commerce website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
-    <link href="/chamber/favicontree.ico" rel="icon" type="image/x-icon"> <!-- favicon-->
+    <link rel="icon" href="/chamber/favicontree.ico" type="image/x-icon"> <!-- favicon-->
     <title>Saratoga Chamber of Commerce Directory Page</title>
 
     <script src="scripts/date.js" defer></script> <!-- JavaScript file for the date in the footer -->
