--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,10 +13,10 @@
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
     <link rel="icon" href="chamber/favicontree.ico" type="image/x-icon"> <!-- favicon -->
-    <title>Home Page Chamber of Commerce</title>
+    <title>Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/script.js" defer></script> <!--i'll probs use this ?-->
+    <script src="scripts/menuTog.js" defer></script> <!--i'll probs use this ?-->
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
@@ -32,7 +32,7 @@
         <h1>Satatoga Chamber of Commerce </h1>
         <nav>
             <ul id="menu">
-                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html"class="active">Home</a></li>
+                <li><a href="https://katdenney.github.io/wdd231/chamber/index.html" class="active">Home</a></li>
                 <li><a href="https://katdenney.github.io/wdd231/chamber/discover.html">Discover</a></li>
                 <li><a href="https://katdenney.github.io/wdd231/chamber/directory.html">Directory</a></li>
                 <li><a href="https://katdenney.github.io/wdd231/chamber/join.html">Join</a></li>
@@ -44,13 +44,10 @@
             <h2>Directory</h2>
             <p>Businesses in the Saratoga area</p>
         </section>
-        <section>
-            <h2>Businesses</h2>
-            <p>Business 1</p>
-            <p>Business 2</p>
-            <p>Business 3</p>
-            <p>Business 4</p>
-            <p>Business 5</p>
+        <section> 
+
+        </section>
+            
     </main>
     <footer>
         <p>
