--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,6 +30,14 @@
 <body>
     <header>
         <h1>Satatoga Chamber of Commerce </h1>
+        <section class="hero">
+            <img src="images/hero.jpg" alt="Welcome to Saratoga Chamber of Commerce">
+            <div class="hero-text">
+                <h1>Welcome to the Saratoga Chamber of Commerce</h1>
+                <p>Supporting local businesses and community growth.</p>
+                <a href="join.html" class="hero-button">Join Now</a>
+            </div>
+        </section>
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/chamber/index.html" class="active">Home</a></li>
@@ -40,12 +48,15 @@
         </nav>
     </header>
     <main class= "main-content">
-        <section>
-            <h2>Directory</h2>
-            <p>Businesses in the Saratoga area</p>
+        <section> 
+            <h2>Current Events</h2>
         </section>
         <section> 
-
+            <h2>Weather</h2>
+        </section>
+        <section>
+            <h2>Company Spotlights</h2>
+            <p>Businesses in the Saratoga area</p>
         </section>
             
     </main>
