weather NOT yet working

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,6 +17,7 @@
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/menuTog.js" defer></script> <!--i'll probs use this ?-->
+    <script src="scripts/weather.js" defer></script> 
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
@@ -51,7 +52,7 @@
         <section> 
             <h2>Current Events</h2>
         </section>
-        <section> 
+        <section id="weather"> 
             <h2>Weather</h2>
         </section>
         <section>
