--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,8 +41,7 @@
     </header>
     <main class= "main-content">
         <section>
-            <h2>Directory</h2>
-            <p>Businesses in the Saratoga area</p>
+            <h2>Become a Member</h2>
         </section>
         <section> 
 
@@ -54,7 +53,7 @@
             &copy; <span id="currentyear"></span> Saratoga Chamber of Commerce
         </p>
         <p>
-            <span id="lastModified" ></span> Katlin Denney WDD231
+            <span id="lastModified"></span> Katlin Denney WDD231
         </p>
 
     </footer>
