--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
     <meta name="description" content="This is the homepage for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
     <meta name="author" content="Katlin Christine Denney"> <!-- Hi I'm the author -->
 
-    <link rel="icon" href="chamber/favicontree.ico" type="image/x-icon"> <!-- favicon -->
+    <link rel="icon" href="images/favicontree.ico" type="image/x-icon"> <!-- favicon -->
     <title>Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
