working on css again

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,16 +53,16 @@
     </header>
     <main class= "main-content">
         <h2>Home Page</h2>
-        <section> 
+        <section class="events"> 
             <h2>Current Events</h2>
         </section>
-        <section id="weather-section"> 
+        <section class= weather id="weather-section"> 
             <h2>Weather</h2>
             <div id="current-weather"></div>
             <h2>3-Day Forecast</h2>
             <div id="three-day-forecast" class="forecast-grid"></div>
         </section>
-        <section>
+        <section class="spotlights">
             <h2>Company Spotlights</h2>
             <p>Businesses in the Saratoga area</p>
         </section>
