--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
             </ul>  
         </nav>
     </header>
-    <main class="main-content">
+    <main class="main-content2">
         <section>
             <h2>Directory</h2>
             <p>Businesses in the Saratoga area</p>
@@ -49,9 +49,10 @@
                 <button id="listViewBtn">List View</button>
             </div>
         </section>
-        <section>
+        <section class=" businesses">
+            <h2>Businesses</h2>
             <div id="directory" class="grid-view">
-                <h2>Businesses</h2>
+               
             </div>
         </section>
     </main>
