--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
     <title>Chamber of Commerce Home Page</title>
 
     <script src="scripts/date.js" defer></script> <!--date for footer -->
-    <script src="scripts/menuTog.js" defer></script> <!--i'll probs use this ?-->
+    <script src="scripts/spotlight.js" defer></script> <!--spotlight section js-->
     <script src="scripts/weather.js" defer></script> 
    
 
@@ -55,6 +55,13 @@
         <h2>Home Page</h2>
         <section class="events"> 
             <h2>Current Events</h2>
+            <h3>Event</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores maxime possimus at consequuntur culpa iste. Fugit assumenda fuga cumque nesciunt dolore dolorem sed est, maxime eligendi vel accusamus velit ex!</p>
+            <h3>Event</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad magni? Perspiciatis nam corporis iste magni harum recusandae illo libero quidem. Voluptatum animi ullam debitis voluptates doloribus laudantium, quia magnam.</p>
+            <h3>Event</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci ut ducimus excepturi, accusantium commodi ratione officia magnam sit accusamus dignissimos natus, dolor incidunt a quo numquam quaerat? Placeat, nemo assumenda!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto sint sunt, quaerat earum quo eos nemo, esse aliquid laboriosam quod rem dolorum! Eius architecto totam debitis optio nihil, necessitatibus consequatur.</p>
         </section>
         <section class= weather id="weather-section"> 
             <h2>Weather</h2>
@@ -64,7 +71,7 @@
         </section>
         <section class="spotlights">
             <h2>Company Spotlights</h2>
-            <p>Businesses in the Saratoga area</p>
+        
         </section>
             
     </main>
