updating og img

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Saratoga Chamber of Commerce Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/home.jpeg">
+    <meta property="og:image" content="https://https://github.com/katdenney/wdd231/blob/main/chamber/images/home.jpeg">
     <meta property="og:url" content="https://katdenney.github.io/wdd231/index.html"> <!-- URL of the page -->
 
     <meta name="description" content="This is the homepage for the Saratoga Chamber of Commerce website."> <!-- Description of the page -->
