adding some css animations

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -39,9 +39,9 @@
             </ul> 
         </nav>
     </header>
-    <main class= "main-content">
+    <main class= "main-content3">
         <section>
-            <h2>Directory</h2>
+            <h2>Discover</h2>
             <p>Businesses in the Saratoga area</p>
         </section>
         <section> 
