thicker font on headings& update the siteplan colors

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>Satatoga Chamber of Commerce </h1>
+        <h1>Join the Satatoga Chamber of Commerce </h1>
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
@@ -44,7 +44,14 @@
             <h2>Become a Member</h2>
         </section>
         <section> 
+            <form class="form">
+                <input name= "username" type= "text" placeholder= "username">
+                <input name= "username" type= "text" placeholder= "username">
+                <input name= "username" type= "text" placeholder= "username">
+                <input name= "termsconditions" type= "checkbox">
 
+                <button type= "submit"> Submit</button>
+            </form>
         </section>
             
     </main>
