save quick while its working lol

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,11 +29,13 @@
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/media.css">
 
 </head>
 <body>
     <header>
         <h1>Join the Satatoga Chamber of Commerce </h1>
+        <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
         <nav>
             <ul id="menu">
                 <li><a href="https://katdenney.github.io/wdd231/chamber/index.html">Home</a></li>
