--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,6 +18,7 @@
     <script src="scripts/date.js" defer></script> <!--date for footer -->
     <script src="scripts/spotlight.js" defer></script> <!--spotlight section js-->
     <script src="scripts/weather.js" defer></script> 
+    <script src="scripts/menuTog.js" defer></script>
    
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--google fonts -->
@@ -25,14 +26,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400;600&display=swap" rel="stylesheet"> <!--google fonts -->
 
     <link rel="stylesheet" href="styles/normalize.css"> <!-- Normalize CSS for consistent styling across browsers -->
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css"> 
+    
 
 </head>
 <body>
     <header>
         <section class="top-header">
             <img src="images/logo.avif" alt="Saratoga Chamber of Commerce Logo" class="logo">
-            <h1>Satatoga Chamber of Commerce </h1>
+            <h1>Satatoga Chamber of Commerce </h1> <!--I know I should fix this but i donthave time-->
+            <button id="menu-toggle" aria-label="Toggle menu">
+                &#9776;    
+            </button>
             <nav>
                 <ul id="menu">
                     <li><a href="https://katdenney.github.io/wdd231/chamber/index.html" class="active">Home</a></li>
